--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,11 +1,13 @@
 node{
-Stage('build'){
+stage('build'){
+echo 'Buildinh'
 
 }
-Stage('test'){
+stage('test'){
+echo 'Buildinh'
 }
-Stage('deploy'){
+stage('deploy'){
+echo 'Buildinh'
 }
 }
-
 
